# quick_gravity_sim

./: README.md  README_CUCKATOO.md  main.py  pyproject.toml  requirements.txt
benchmarks/: benchmark.py
cuckatoo_solver/: __init__.py  cli.py  hashing.py  solver.py
docs/: DESIGN.md
quick_gravity_sim/: __init__.py  body.py  cli.py  constants.py  simulator.py
tests/: test_hashing.py  test_simulator.py  test_solver_api.py  test_verify_cycle.py
