[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuckatoo-solver-proto"
version = "0.1.0"
description = "Prototype Cuckoo/Cuckatoo cycle solver with linear-time memory tradeoff structure"
authors = [{name = "OSS"}]
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
